multiple ui changes

--- a/src/themes/pucmm/app/footer/footer.component.html
+++ b/src/themes/pucmm/app/footer/footer.component.html
@@ -90,6 +90,11 @@
       </p>
       <ul class="footer-info list-unstyled d-flex justify-content-center mb-0">
         <li>
+          <a routerLink="/page/about-the-repository" class="btn text-white">
+            Sobre el repositorio
+          </a>
+        </li>
+        <li>
           <a routerLink="/community-list" class="btn text-white">
             {{ 'footer.communityList' | translate}}
           </a>
