--- a/src/themes/pucmm/app/home-page/home-news/home-news.component.html
+++ b/src/themes/pucmm/app/home-page/home-news/home-news.component.html
@@ -1,12 +1,7 @@
 <div class="jumbotron jumbotron-fluid mt-ncs text-center" id="home-jumbotron">
   <div class="container text-center">
     <div class="text-center">
-        <h3 id="home-title">Repositorio Institucional</h3>
-      <p class="mobile-hidden">El <strong>Repositorio Institucional</strong>
-         se esfuerza por brindar acceso abierto, capturar, almacenar, preservar, indexar y
-        distribuir en formato digital, las investigaciones de las diferentes facultades,
-        departamentos ... <a routerLink="/page/about-the-repository" class="text-white"> Leer más </a>
-        </p>
+        <h3 id="home-title" class="my-5">REPOSITORIO INSTITUCIONAL INVESTIGARE PUCMM</h3>
     </div>
     <div id="homeSearchForm">
       <ds-themed-search-form [inPlaceSearch]="false"
