--- a/src/themes/pucmm/app/home-page/home-page.component.html
+++ b/src/themes/pucmm/app/home-page/home-page.component.html
@@ -2,7 +2,7 @@
 <ng-container *ngIf="(site$ | async) as site">
   <ds-view-tracker [object]="site"></ds-view-tracker>
 </ng-container>
-<div class="container-fluid bg-light pt-4">
+<div class="container-fluid bg-light py-4">
   <ds-themed-top-level-community-list></ds-themed-top-level-community-list>
 </div>
 
